--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Manjari&family=Montserrat:wght@400;800&family=Plaster&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>hangman</title>
   </head>
